# exerc

./: README.md  ex00.py  ex01.py  pyproject.toml
discovery_piscine/module0/ex01/: 42.py
discovery_piscine/module0/ex02/: hello_world.py
discovery_piscine/module1/ex00/: name.py
discovery_piscine/module1/ex01/: name.py
discovery_piscine/module1/ex02/: age.py
discovery_piscine/module1/ex03/: whatsyourname.py
discovery_piscine/module2/ex01/: isneg.py
discovery_piscine/module2/ex02/: password.py
discovery_piscine/module2/ex03/: mult.py
discovery_piscine/module3/ex00/: to25.py
discovery_piscine/module3/ex01/: multiplication_table.py
discovery_piscine/module3/ex03/: advanced_mult.py
discovery_piscine/module4/ex00/: upcase_it.py
discovery_piscine/module4/ex01/: age.py
discovery_piscine/module4/ex02/: calculator.py
discovery_piscine/module4/ex03/: float.py
discovery_piscine/module4/ex05/: up_low.py
discovery_piscine/module5/ex00/: create_array.py
discovery_piscine/module5/ex01/: play_with_arrays.py
discovery_piscine/module5/ex02/: play_with_arrays.py
discovery_piscine/module5/ex03/: play_with_arrays.py
discovery_piscine/module5/ex04/: parameters.py
discovery_piscine/module6/ex01/: upcase_it.py
module2/: ex00.py  ex01.py  ex02.py  ex03.py
module3/: ex00.py  ex01.py  ex02.py  ex03.py
module4/: ex00.py  ex02.py  ex04.py  ex05.py
module5/: ex00.py  ex01.py  ex02.py  ex03.py  ex04.py
module6/: ex00.py  ex01.py  ex02.py  ex03.py  ex04.py
module7/: ex00.py  ex03.py  ex04.py
module8/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py
(+18 files in other folders)
