[project]
name = "exerc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "poethepoet>=0.43.0",
]

[tool.poe.tasks]
uvrm='uv run main.py'
r='python'
m4ex00='python module4/ex00.py'
m4ex01='python module4/ex01.py'
m4ex02='python module4/ex02.py'
m4ex03='python module4/ex03.py'
