[project]
name = "exerc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "poethepoet>=0.43.0",
]

[tool.poe.tasks]
uvrm='uv run main.py'
r='python'
m5ex00='python module5/ex00.py'
m5ex01='python module5/ex01.py'
m5ex02='python module5/ex02.py'
m5ex03='python module5/ex03.py'
m5ex04='python module5/ex04.py'
m5ex05='python module5/ex05.py'
