[project]
name = "exerc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "poethepoet>=0.43.0",
]

[tool.poe.tasks]
uvrm = "uv run main.py"
r = "python"

[tool.poe.tasks.run]
cmd = "./discovery_piscine/module$module/ex$exercise/$file"
args = ["module", "exercise", "file"]

#exmplo para executar o hello_world.py do módulo 0, exercício 02
#executa: poe run --module 0 --exercise 02 --file hello_world.py